# python-finder

./: .flake8  .gitignore  .pylintrc  .replit  Readme.md  config_loader.py  emails.xlsx  emails2.xlsx  emails3.xlsx  main.py  pyproject.toml  replit.md  run_leadgen.py  test_new_cli.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-You-are-reviewing-a-Python-CLI-project-The-goal-is-to-turn-this-into-a-high-functioning-extensible-1758295511863_1758295511864.txt
config/: domain_finders.txt  email_finders.txt  providers.txt  proxies.txt  queries.txt
finders/: base_finder.py  hunter_finder.py  snov_finder.py
leadgen/: main.py  orchestrator.py
leadgen/cli/: main.py
leadgen/config/: loader.py  models.py
leadgen/domain_finders/: apollo.py  base.py  google.py  hunter.py
leadgen/email_finders/: base.py  hunter.py
leadgen/finders/: base.py  hunter.py
leadgen/io/: storage.py
leadgen/models/: company.py  email_result.py
leadgen/providers/: base.py  google.py  yelp.py
leadgen/utils/: domain.py  logging.py  proxy.py  state.py
output/: companies.jsonl  companies.txt  domains.txt  emails.jsonl  emails.txt  emails.xlsx
output/.state/: state.json
providers/: base_provider.py  google_provider.py  yelp_provider.py
src/leadgen/: orchestrator.py
src/leadgen/cli/: main.py
src/leadgen/config/: loader.py  models.py
src/leadgen/finders/: base.py  hunter.py
src/leadgen/io/: storage.py
src/leadgen/models/: company.py  email_result.py
src/leadgen/providers/: yelp.py
src/leadgen/utils/: domain.py
state/: state.json
